src/ingress/ParsingProcessorService.yml
apiVersion: v1
kind: Service
metadata:
  name: parsing-processor-service
  labels:
    app: parsing-processor-service
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 80
  selector:
    app: parsing-processor-pod
