src/ingress/Ingress.yml
apiVersion: apps/v1
kind: Ingress
metadata:
  name: Nuclear-bot-ingress
spec:
  rules:
